css/app.css
body {
	font-family: Arial, sans-serif;
	height: 100%;
	margin: 0;
	padding: 0;
}

#map {
	height: 100%;
}


.navbar.navbar-default {
	height: 25x;
	margin: auto;
	padding: 15px 15px;
	background-color: #33334d;
	color: white;
}

.nav-brand {
	font-size: 30px;
}

/*hamburger icon style*/
.menu-btn {
	float: right;
	margin:auto;
	cursor: pointer;

}

.icon-bar {
    width: 35px;
    height: 5px;
    margin: 6px 0;
}

/*Sidebar*/
#mySidebar {

}

#list-sidebar {
	height: 100%;
	background-color: #33334d;
	width: 250px;
	transition-property: width 1s;
	-webkit-transition-property: width 1s;
}

.search {
	margin: 10px 10px 5px 10px;
	padding: 10px 10px 5px 10px;
}

.divider {
	margin: 10px 5px;
}

.nav-close {
	padding-right: 0px;
	padding-left: 0px;
}

.nav-open {
	padding-right: 10px;
	padding-left: 10px;
}

a {
	color: white;
/*	font-size: 1.4rem;*/
}

/*Media Query*/
@media screen and (min-width: 768px) {
	.navbar-toggle {
    	display: block;
}

